--- a/assets/style.css
+++ b/assets/style.css
@@ -4,6 +4,23 @@
   box-sizing: border-box;
 }
 
+.section-title {
+  font-size: 55px;
+  color: #024e76;
+  margin-bottom: 35px;
+  padding: 0 100px 20px 100px;
+  display: inline-block;
+  border-bottom: 3px solid;
+}
+
+.primary-border {
+  border-color: #fce138;
+}
+
+.secondary-border {
+  border-color: #39a6b2;
+}
+
 body {
   /* more on this crazy alphanumerical value in a minute! */
   color: #39a6b2;
@@ -118,16 +135,6 @@ section {
   text-align: center;
 }
 
-.intro h2 {
-  font-size: 55px;
-  color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  border-bottom: 3px solid;
-  border-color: #fce138;
-  display: inline-block;
-}
-
 .intro p {
   line-height: 1.7;
   color: #39a6b2;
@@ -135,3 +142,34 @@ section {
   font-size: 20px;
   margin: 0 auto;
 }
+
+/* About style end */
+
+/* portfolio style start */
+
+.work {
+  text-align: center;
+  background: #fce138;
+}
+
+.work div {
+  margin-bottom: 80px;
+}
+
+.work img {
+  width: 15%;
+  margin: 10px 0;
+}
+
+.work h3 {
+  color: #024e76;
+  font-size: 46px;
+  margin-top: 10px;
+}
+
+.work p {
+  color: #39a6b2;
+  font-size: 23px;
+}
+
+
