--- a/assets/style.css
+++ b/assets/style.css
@@ -6,11 +6,11 @@
 
 .section-title {
   font-size: 55px;
-  color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
   display: inline-block;
+  padding: 0 100px 20px 100px;
   border-bottom: 3px solid;
+  margin-bottom: 35px;
+  color: #024e76;
 }
 
 .primary-border {
@@ -31,6 +31,9 @@ body {
 header {
   padding: 20px 35px;
   background-color: #39a6b2;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 header h1 {
@@ -38,7 +41,7 @@ header h1 {
   font-size: 36px;
   color: #fce138;
   margin: 0;
-  display: inline;
+  /* display: inline; */
 }
 
 header a {
@@ -47,7 +50,7 @@ header a {
 }
 
 header nav {
-  float: right;
+  /* float: right; */
   margin: 7px 0;
 }
 
@@ -103,11 +106,11 @@ section {
   border: 3px solid #024e76;
   background-color: #fce138;
   padding: 20px;
-  width: 500px;
+  width: 400px;
   color: #024e76;
-  /* position: absolute; */
   bottom: 120px;
   right: 140px;
+  text-align: left;
 }
 
 .hero-form h3 {
@@ -172,4 +175,41 @@ section {
   font-size: 23px;
 }
 
+/* port. end */
 
+/* contact style start */
+
+.contacts {
+  text-align: center;
+  background: #024e76;
+}
+
+.contacts h2 {
+  color: #fce138;
+}
+
+.contact-info iframe {
+  width: 400px;
+  height: 400px;
+}
+
+.contact-info div {
+  width: 410px;
+  display: inline-block;
+  vertical-align: top;
+  text-align: left;
+  margin: 30px 0 0 60px;
+  color: white;
+}
+
+.flex {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+/* form-field */
+
+.form-field {
+  padding: 10px;
+  /* margin: 10px; */
+}
